--- a/JS/CH1/03_script.html
+++ b/JS/CH1/03_script.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>HTML PAGE</h1>
+    <script>
+        alert("hello !!!");
+    </script>
 </body>
 </html>
